--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <header>
       <section class="sectoin">
         <div class="container">
+          <h1 class="title">Lorem ipsum dolor sit amet.</h1>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque similique ducimus
+            eos sequi rerum omnis.
+          </p>
           <ul class="list">
             <li class="item">1</li>
             <li class="item">2</li>
